fix: box sizing to remove white space outside doc

--- a/client/src/Components/Footer/index.css
+++ b/client/src/Components/Footer/index.css
@@ -6,6 +6,7 @@
     margin-left: auto;
     max-width: 1140px;
     text-align: center!important;
+    box-sizing: border-box;
 }
 
 .footer-container h2 {
